@startuml


class Playground {
  playgroundId : int
  name : String
  longitude : double
  latitude : double
  capacity : int
}

class Facilities {
  facilitiesId : int
  toilet : boolean
  swings : boolean
  sandbox : boolean
  slide : boolean
  climbingWall : boolean
  seesaw : boolean
  playHouse : boolean
  merryGoRound : boolean
  basketballCourt : boolean
  soccerField : boolean
  picnicArea : boolean
  lighting : boolean
  benches : boolean
  drinkingFountain : boolean
  accessibilityFeatures : boolean
  firstAidStation : boolean
  dogPark : boolean
  miscellaneous : String
}

class Rating {
  id : Integer
  rating : int
  comment : String
}

class CheckIn {
  id : int
  checkInTime : LocalDateTime
  checkOutTime : LocalDateTime
}

class User {
  id : int
  parentName : String
  email : String
  password : String
}

class Child {
  childId : int
  name : String
  age : Integer
  gender : String
  sex : String
}


' Relationships

Playground <-- CheckIn
Playground -->  Facilities : has
Playground -->  Rating : receives
User <--  Rating : has

User <--  Child : has
User  --> CheckIn
@enduml